# Learning-LangChain

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Chains/: conditional_chain.py  parallel_chain.py  sequential_chain.py  simple_chain.py
Models/ChatModels/: google_gemini.py  hf_api.py  hf_local.py
Models/EmbeddingModels/: document_similarity.py  hf_embd.py
Models/LLMs/: llm_demo.py
Prompts/: prompt_generator.py  prompt_ui.py  templete.json
Prompts/ChatBot/: chatbot.py
Prompts/Messages/: chat_prompt_template.py  message_placeholder.py  messages.py
RAG/DocumentLoaders/: csv_loader.py  directory_loader.py  pdf_loader.py  text_loader.py  webbase_loader.py
RAG/Retriever/: retrievers.ipynb
RAG/TextSplitters/: length_based.py  markdown_splitting.py  python_code_splitting.py  semantic_meaning_based.py  text_structure_based.py
RAG/VectorStore/: chroma_vs.ipynb
RAG/VectorStore/chroma_db/: chroma.sqlite3
Runnables/: runnable_branch.py  runnable_lambda.py  runnable_parallel.py  runnable_passthrough.py  runnable_sequence.py
Runnables/Zindegis/: langchain_aam_zindagi.ipynb  langchain_mentos_zindagi.ipynb
StructuredOutput/: jsonOutputParser.py  pydanticOutputParser.py  strOutputParser.py  with_structured_output_llama.py
